add: Implement soft delete and archiving for expenses
- Refactor backend with lombok
- Soft delete via `deleted` flag on DELETE /api/expenses/{id}
- New endpoint GET /api/expenses/archived for archived items
- Auto-archive logic for expenses older than 30 days
- UI update: Changed "Delete" to "Archive" button
- Added archived expenses view section on frontend
- Additonal UI tweaks and fixes

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,6 +24,11 @@
     </properties>
 
     <dependencies>
+    <!-- Spring Boot Starter (core, includes scheduling) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <!-- Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,6 +67,14 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
