--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,12 @@
             <version>1.18.30</version> <scope>provided</scope>
         </dependency>
 
+        <!-- Spring Boot Starter Validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
