--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest"
+    "test": "jest --config jest.config.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -23,8 +23,9 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@vue/test-utils": "^1.3.0",
+    "@vue/test-utils": "^1.3.6",
     "@vue/vue2-jest": "^29.2.6",
+    "@vue/vue3-jest": "^29.2.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
     "eslint": "^7.32.0",
